client/developer/EchoCoder/client/capstone/master/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-capstone
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: echo-capstone.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-capstone
                port:
                  number: 80
